kubernetes/pubsub/templates/console.yaml
---
# Source: pubsub/templates/console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: console
  name: console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: console
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: console
    spec:
      containers:
        - env:
            - name: RabbitMQ__Hostname
              valueFrom:
                configMapKeyRef:
                  name: console
                  key: rabbitmq_hostname
            - name: RabbitMQ__Password
              valueFrom:
                secretKeyRef:
                  key: rabbit-password
                  name: rabbit-password
            - name: RabbitMQ__Username
              valueFrom:
                secretKeyRef:
                  key: rabbit-username
                  name: rabbit-username
          image: jordanbtrs/console
          name: lab-console
          resources: {}
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets-manager"
