kubernetes/pubsub/templates/api.yaml
---
# Source: pubsub/templates/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: api
  type: ClusterIP
---
# Source: pubsub/templates/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: MSSQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mssql-password
                  key: mssql-password
            - name: ConnectionStrings__DefaultConnection
              value: "Server=tcp:mssql,1433;Initial Catalog=RabbitMqDemo;Persist Security Info=False;User ID=sa;Password=$(MSSQL_PASSWORD);Connection Timeout=30;"
            - name: RabbitMQ__Hostname
              valueFrom:
                configMapKeyRef:
                  name: api
                  key: rabbitmq_hostname
            - name: RabbitMQ__Password
              valueFrom:
                secretKeyRef:
                  key: rabbit-password
                  name: rabbit-password
            - name: RabbitMQ__Username
              valueFrom:
                secretKeyRef:
                  key: rabbit-username
                  name: rabbit-username
          image: jordanbtrs/api
          name: api
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets-manager"
---
# Source: pubsub/templates/api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: "tobereplaced"
    http:
      paths:
      - path: /api/Product/productlist
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
